--- a/events.html
+++ b/events.html
@@ -2,118 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Feast Day Calendar | Events</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f7f5ef;
-      color: #333;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background-color: #005f73;
-      color: white;
-      padding: 2rem;
-      text-align: center;
-    }
-    .section {
-      max-width: 960px;
-      margin: 2rem auto;
-      padding: 2rem;
-      background: white;
-      border-radius: 16px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    input[type="search"] {
-      width: 100%;
-      padding: 0.75rem;
-      margin-bottom: 1rem;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 12px;
-      text-align: left;
-    }
-    th {
-      background-color: #005f73;
-      color: white;
-    }
-    tr:nth-child(even) {
-      background-color: #f1f1f1;
-    }
-    footer {
-      background-color: #005f73;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Feast Day Calendar</title>
 </head>
 <body>
-  <header>
-    <h1>Feast Day Calendar</h1>
-    <p>Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore</p>
-  </header>
-
-  <div class="section" id="events">
-    <h2>Annual Feast Days</h2>
-    <input type="search" id="searchInput" placeholder="Search feast name or date...">
-
-    <table id="feastTable">
-      <thead>
-        <tr>
-          <th>Calendar Date</th>
-          <th>Gregorian Date</th>
-          <th>Feast Day</th>
-          <th>Description</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Sene 12</td>
-          <td>June 19</td>
-          <td>Sene Mikael</td>
-          <td>Celebration of Saint Michael's protection and miracles, observed yearly on Sene 12.</td>
-        </tr>
-        <tr>
-          <td>Hidar 12</td>
-          <td>November 21</td>
-          <td>Hidar Mikael</td>
-          <td>Major feast in honor of Saint Michael's intercession and presence in the Orthodox tradition.</td>
-        </tr>
-        <tr>
-          <td>Ginbot 11</td>
-          <td>May 19</td>
-          <td>Feast of Saint Yared</td>
-          <td>Commemoration of Saint Yared, the father of church music and hymnology.</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <footer>
-    <p>&copy; 2025 Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore. All rights reserved.</p>
-  </footer>
-
-  <script>
-    const searchInput = document.getElementById("searchInput");
-    const table = document.getElementById("feastTable");
-    searchInput.addEventListener("keyup", function () {
-      const filter = searchInput.value.toLowerCase();
-      const rows = table.querySelectorAll("tbody tr");
-      rows.forEach(row => {
-        const text = row.textContent.toLowerCase();
-        row.style.display = text.includes(filter) ? "" : "none";
-      });
-    });
-  </script>
+  <h1>Annual Feast Days</h1>
+  <iframe src="https://calendar.google.com/calendar/embed?src=YOUR_CALENDAR_ID" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
 </body>
 </html>
