--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore</title>
-  <meta name="description" content="Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore. Join our community in faith and worship.">
-  <meta name="author" content="Saint Michael and Saint Yared Church">
-  <meta property="og:title" content="Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore">
-  <meta property="og:description" content="Welcome to our church community in Baltimore, following the rich traditions of the Tigray Orthodox Tewahedo faith.">
-  <meta property="og:image" content="https://i.etsystatic.com/18195780/r/il/5dd600/1829288331/il_fullxfull.1829288331_goaw.jpg">
-  <meta property="og:url" content="https://saint-michael-saint-yared.github.io/">
-  <meta property="og:type" content="website">
-  <link rel="icon" href="favicon.ico">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Saint Michael and Saint Yared Church Baltimore</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -24,19 +16,13 @@
       background-color: #005f73;
       color: white;
       text-align: center;
-      padding: 2rem 1rem;
-    }
-    header img {
-      width: 240px;
-      height: auto;
-      border-radius: 50%;
-      margin-bottom: 1rem;
+      padding: 2rem;
     }
     nav {
       background-color: #0a9396;
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
+      flex-wrap: wrap;
       padding: 1rem 0;
     }
     nav a {
@@ -49,15 +35,17 @@
       text-decoration: underline;
     }
     .section {
-      padding: 2rem;
-      background-color: white;
-      margin: 1.5rem auto;
       max-width: 960px;
+      margin: 2rem auto;
+      padding: 2rem;
+      background: white;
       border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
-    h2 {
-      color: #005f73;
+    iframe {
+      width: 100%;
+      border: none;
+      margin: 1rem 0;
     }
     footer {
       background-color: #005f73;
@@ -65,117 +53,33 @@
       text-align: center;
       padding: 1rem;
     }
-    iframe {
-      width: 100%;
-      height: 600px;
-      border: none;
-    }
-    .placeholder {
-      text-align: center;
-      color: #666;
-      font-style: italic;
-      padding-top: 1rem;
-    }
-    form input, form textarea {
-      width: 100%;
-      padding: 10px;
-      margin-top: 8px;
-      margin-bottom: 12px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    form button {
-      background-color: #0a9396;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    form button:hover {
-      background-color: #007d85;
-    }
   </style>
 </head>
 <body>
   <header>
-    <img src="https://i.etsystatic.com/18195780/r/il/5dd600/1829288331/il_fullxfull.1829288331_goaw.jpg" alt="Saint Michael Logo">
-    <h1>Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore</h1>
+    <h1>Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church</h1>
     <p>410 Melvin Ave, Catonsville, MD 21228</p>
   </header>
-
   <nav>
-    <a href="#about">About</a>
-    <a href="#mission">Mission</a>
-    <a href="#services">Services</a>
-    <a href="#events">Events</a>
-    <a href="#gallery">Gallery</a>
-    <a href="#media">Media</a>
+    <a href="index.html">Home</a>
+    <a href="events.html">Events</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="media.html">Media</a>
     <a href="#contact">Contact</a>
   </nav>
-
   <div class="section" id="about">
     <h2>About Our Church</h2>
     <p>Welcome to the Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore. We are a community dedicated to teaching and preaching Christianity, following the rich traditions of the Tigray Orthodox Tewahedo faith.</p>
   </div>
-
-  <div class="section" id="mission">
-    <h2>Mission</h2>
-    <p>Our mission is to share the Gospel of Christ, foster spiritual growth, and serve our community in the love of God. We seek to build a welcoming environment where faith, fellowship, and worship bring us closer to God and each other.</p>
-  </div>
-
-  <div class="section" id="services">
-    <h2>Service Schedule</h2>
-    <p>We hold Divine Liturgy and worship services every Sunday morning and on all major holiday days according to the Tigray Orthodox Tewahedo calendar.</p>
-    <ul>
-      <li><strong>Sunday Divine Liturgy:</strong> 10:00 AM</li>
-      <li><strong>Holiday Services:</strong> Times vary—please refer to announcements or contact the church office.</li>
-    </ul>
-  </div>
-
-  <div class="section" id="events">
-    <h2>Feast Day Celebrations</h2>
-    <ul>
-      <li><strong>Sene Mikael:</strong> June 19 (annual celebration of Saint Michael)</li>
-      <li><strong>Hidar Mikael:</strong> November 21 (major feast for Saint Michael)</li>
-      <li><strong>Saint Yared Feast Day:</strong> May 19 (honoring the composer of Tewahedo hymns)</li>
-    </ul>
-    <iframe src="https://drive.google.com/embeddedfolderview?id=1If9EirRjfQqRtMavOMoIcDhzUUUkQ80p#list"></iframe>
-    <div class="placeholder">If no events appear, please check back soon. Upcoming events will be displayed here.</div>
-  </div>
-
-  <div class="section" id="gallery">
-    <h2>Photo Gallery</h2>
-    <iframe src="https://drive.google.com/embeddedfolderview?id=176idm9FVG8AttZ3FOQgb3AqfglOAwEoP#grid"></iframe>
-    <div class="placeholder">Photos from our celebrations and community gatherings will appear here.</div>
-  </div>
-
-  <div class="section" id="media">
-    <h2>Media – Sermons & Choir</h2>
-    <iframe src="https://drive.google.com/embeddedfolderview?id=1If9EirRjfQqRtMavOMoIcDhzUUUkQ80p#list"></iframe>
-    <div class="placeholder">Audio and video recordings of sermons and choir will be available soon.</div>
-  </div>
-
   <div class="section" id="contact">
     <h2>Contact Us</h2>
-    <form action="https://formspree.io/f/mjkrvvne" method="POST">
-      <label for="name">Name:</label>
-      <input type="text" name="name" required>
-
-      <label for="email">Email:</label>
-      <input type="email" name="email" required>
-
-      <label for="message">Message:</label>
-      <textarea name="message" rows="5" required></textarea>
-
-      <button type="submit">Send Message</button>
-    </form>
-    <p><strong>Address:</strong> 410 Melvin Ave, Catonsville, MD 21228</p>
+    <p><strong>Phone:</strong> (410) 555-1234</p>
     <p><strong>Email:</strong> <a href="mailto:St.michael.yard@gmail.com">St.michael.yard@gmail.com</a></p>
+    <p><strong>Address:</strong> 410 Melvin Ave, Catonsville, MD 21228</p>
+    <iframe src="https://www.google.com/maps?q=410+Melvin+Ave,+Catonsville,+MD+21228&output=embed" height="450"></iframe>
   </div>
-
   <footer>
-    <p>&copy; 2025 Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore. All rights reserved.</p>
+    <p>&copy; 2025 Saint Michael and Saint Yared Church Baltimore. All rights reserved.</p>
   </footer>
 </body>
 </html>
