--- a/index.html
+++ b/index.html
@@ -4,6 +4,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore</title>
+  <!-- Favicon (optional) -->
+  <link rel="icon" href="saint_michael_logo.jpg" type="image/jpeg">
+
+  <!-- Meta tags for SEO/social previews -->
+  <meta name="description" content="Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore. Join our community in faith and worship.">
+  <meta property="og:title" content="Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore">
+  <meta property="og:description" content="Welcome to our church community in Baltimore, following the rich traditions of the Tigray Orthodox Tewahedo faith.">
+  <meta property="og:image" content="https://your-username.github.io/saint_michael_logo.jpg">
+  <meta property="og:url" content="https://saint-michael-saint-yared.github.io">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore">
+  <meta name="twitter:description" content="Join our community in Baltimore, embracing the traditions of the Tigray Orthodox Tewahedo faith.">
+  <meta name="twitter:image" content="https://your-username.github.io/saint_michael_logo.jpg">
+
+  <!-- Structured Data for Organization (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Church",
+    "name": "Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church",
+    "url": "https://saint-michael-saint-yared.github.io",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "410 Melvin Ave",
+      "addressLocality": "Catonsville",
+      "addressRegion": "MD",
+      "postalCode": "21228",
+      "addressCountry": "US"
+    },
+    "email": "st.michael.yared@gmail.com"
+  }
+  </script>
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -51,11 +85,39 @@
     h2 {
       color: #005f73;
     }
+    /* Responsive iframes */
     iframe {
       width: 100%;
-      height: 400px;
+      height: 450px;
       border: none;
-      margin-top: 1rem;
+      margin-bottom: 1.5rem;
+    }
+    /* Form styling */
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    input, textarea {
+      padding: 0.75rem;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      width: 100%;
+    }
+    button {
+      background-color: #005f73;
+      color: white;
+      padding: 0.75rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      width: 150px;
+      align-self: flex-start;
+    }
+    button:hover {
+      background-color: #0a9396;
     }
     .placeholder {
       text-align: center;
@@ -63,44 +125,25 @@
       font-style: italic;
       padding-top: 1rem;
     }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-    input, textarea {
-      padding: 0.5rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 1rem;
-    }
-    button {
-      background-color: #005f73;
-      color: white;
-      padding: 0.75rem;
-      border: none;
-      border-radius: 8px;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #0a9396;
-    }
     footer {
       background-color: #005f73;
       color: white;
       text-align: center;
       padding: 1rem;
+      margin-top: 2rem;
     }
   </style>
 </head>
 <body>
+  <!-- HEADER -->
   <header>
-    <img src="https://i.etsystatic.com/18195780/r/il/5dd600/1829288331/il_fullxfull.1829288331_goaw.jpg" alt="Saint Michael Logo">
+    <!-- Use your uploaded logo instead of remote URL -->
+    <img src="saint_michael_logo.jpg" alt="Saint Michael Logo">
     <h1>Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore</h1>
     <p>410 Melvin Ave, Catonsville, MD 21228</p>
   </header>
 
+  <!-- NAVIGATION -->
   <nav>
     <a href="#about">About</a>
     <a href="#mission">Mission</a>
@@ -111,56 +154,80 @@
     <a href="#contact">Contact</a>
   </nav>
 
+  <!-- ABOUT SECTION -->
   <div class="section" id="about">
     <h2>About Our Church</h2>
     <p>Welcome to the Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore. We are a community dedicated to teaching and preaching Christianity, following the rich traditions of the Tigray Orthodox Tewahedo faith.</p>
   </div>
 
+  <!-- MISSION SECTION -->
   <div class="section" id="mission">
     <h2>Mission</h2>
     <p>Our mission is to share the Gospel of Christ, foster spiritual growth, and serve our community in the love of God. We seek to build a welcoming environment where faith, fellowship, and worship bring us closer to God and each other.</p>
   </div>
 
+  <!-- SERVICES SECTION -->
   <div class="section" id="services">
     <h2>Service Schedule</h2>
+    <p>We hold Divine Liturgy and worship services every Sunday morning and on all major holiday days according to the Tigray Orthodox Tewahedo calendar.</p>
     <ul>
       <li><strong>Sunday Divine Liturgy:</strong> 10:00 AM</li>
       <li><strong>Holiday Services:</strong> Times vary—please refer to announcements or contact the church office.</li>
     </ul>
   </div>
 
+  <!-- EVENTS SECTION: Active Google Drive embed + Google Calendar link -->
   <div class="section" id="events">
-    <h2>Feast Day Celebrations</h2>
-    <iframe src="https://drive.google.com/embeddedfolderview?id=1If9EirRjfQqRtMavOMoIcDhzUUUkQ80p#list"></iframe>
-    <div class="placeholder">If no events appear, please check back soon.</div>
+    <h2>Feast Day Celebrations (Events)</h2>
+    <!-- Embed your Google Drive “Events” folder dynamically: -->
+    <iframe src="https://drive.google.com/embeddedfolderview?id=1If9EirRjfQqRtMavOMoIcDhzUUUkQ80p#grid"></iframe>
+    <div class="placeholder">If no events appear, please ensure that “Anyone with link can view” is enabled on this Drive folder.</div>
+    <p style="margin-top: 1rem;"><em>Or view a live calendar of upcoming dates:</em></p>
+    <!-- Optionally, embed a Google Calendar for a more classic “upcoming events” view: -->
+    <iframe src="https://calendar.google.com/calendar/embed?src=YOUR_GOOGLE_CALENDAR_ID&amp;ctz=America%2FNew_York" style="border:0;" height="450"></iframe>
   </div>
 
+  <!-- GALLERY SECTION: Active Google Drive embed  -->
   <div class="section" id="gallery">
     <h2>Photo Gallery</h2>
+    <!-- Embed your Google Drive “Photo Gallery” folder dynamically: -->
     <iframe src="https://drive.google.com/embeddedfolderview?id=176idm9FVG8AttZ3FOQgb3AqfglOAwEoP#grid"></iframe>
-    <div class="placeholder">Photos from celebrations and community events will appear here.</div>
+    <div class="placeholder">Photos from our celebrations and community gatherings will appear here.</div>
   </div>
 
+  <!-- MEDIA SECTION: Active Google Drive embed + YouTube player example -->
   <div class="section" id="media">
-    <h2>Media – Sermons & Choir</h2>
+    <h2>Media – Sermons &amp; Choir</h2>
+    <!-- Option A: Google Drive folder embed for audio/video files -->
     <iframe src="https://drive.google.com/embeddedfolderview?id=1If9EirRjfQqRtMavOMoIcDhzUUUkQ80p#list"></iframe>
-    <div class="placeholder">Audio and video sermons will be available soon.</div>
+    <div class="placeholder">Audio and video recordings of sermons and choir will be available soon.</div>
+
+    <p style="margin-top: 1.5rem;"><em>Or watch our latest YouTube recordings:</em></p>
+    <!-- Option B: Embed live YouTube player(s) (replace VIDEO_ID with your channel’s video IDs) -->
+    <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" allowfullscreen height="300"></iframe>
+    <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" allowfullscreen height="300"></iframe>
   </div>
 
+  <!-- CONTACT SECTION: Active Formspree + Live Map  -->
   <div class="section" id="contact">
     <h2>Contact Us</h2>
     <p><strong>Address:</strong> 410 Melvin Ave, Catonsville, MD 21228</p>
     <p><strong>Phone:</strong> (410) 555-1234</p>
     <p><strong>Email:</strong> <a href="mailto:St.michael.yard@gmail.com">St.michael.yard@gmail.com</a></p>
+
+    <!-- Active Formspree Contact Form -->
     <form action="https://formspree.io/f/mjkrvvne" method="POST">
       <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+      <input type="email" name="_replyto" placeholder="Your Email" required>
+      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
       <button type="submit">Send Message</button>
     </form>
-    <iframe src="https://www.google.com/maps?q=410+Melvin+Ave,+Catonsville,+MD+21228&output=embed"></iframe>
+
+    <!-- Live Google Map embed -->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3067.2870815243996!2d-76.69763178462315!3d39.2729559794724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81af4a3ddc4b9%3A0x5c3d8b7f6a9c0eeb!2s410%20Melvin%20Ave%2C%20Catonsville%2C%20MD%2021228!5e0!3m2!1sen!2sus!4v162...EXAMPLE_KEY..." width="100%" height="450"></iframe>
   </div>
 
+  <!-- FOOTER -->
   <footer>
     <p>&copy; 2025 Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore. All rights reserved.</p>
   </footer>
