--- a/media.html
+++ b/media.html
@@ -3,14 +3,111 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Media & Sermons</title>
+  <title>Media &amp; Sermons | Saint Michael and Saint Yared Church</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f7f5ef;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+    header {
+      background-color: #005f73;
+      color: white;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+    header img {
+      width: 200px;
+      height: auto;
+      border-radius: 50%;
+      margin-bottom: 1rem;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 1.75rem;
+    }
+    nav {
+      background-color: #0a9396;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 1rem 0;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1rem;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .section {
+      padding: 2rem;
+      background-color: white;
+      margin: 1.5rem auto;
+      max-width: 960px;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+    h2, h1 {
+      color: #005f73;
+    }
+    iframe {
+      width: 100%;
+      height: 400px;
+      border: none;
+      border-radius: 8px;
+      margin-top: 1rem;
+    }
+    audio {
+      width: 100%;
+      margin-top: 2rem;
+      border-radius: 8px;
+    }
+    footer {
+      background-color: #005f73;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+  </style>
 </head>
 <body>
-  <h1>Videos and Songs</h1>
-  <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" allowfullscreen width="100%" height="400"></iframe>
-  <audio controls style="width:100%; margin-top:2rem;">
-    <source src="https://example.com/your-audio-file.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
+  <!-- HEADER -->
+  <header>
+    <img src="https://i.etsystatic.com/18195780/r/il/5dd600/1829288331/il_fullxfull.1829288331_goaw.jpg" alt="Saint Michael Logo">
+    <h1>Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore</h1>
+  </header>
+
+  <!-- NAVIGATION -->
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="events.html">Events</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="media.html">Media</a>
+  </nav>
+
+  <!-- MEDIA SECTION -->
+  <div class="section" id="media">
+    <h2>Videos and Songs</h2>
+    <!-- Replace YOUR_VIDEO_ID with your actual YouTube video ID -->
+    <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" allowfullscreen></iframe>
+
+    <!-- Replace the audio src URL with your actual MP3 link -->
+    <audio controls>
+      <source src="https://example.com/your-audio-file.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+  </div>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>&copy; 2025 Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore. All rights reserved.</p>
+  </footer>
 </body>
 </html>
