--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore</title>
 
+  <!-- Favicon (optional) -->
   <link rel="icon" href="saint_michael_logo.jpg" type="image/jpeg">
+
+  <!-- Meta description -->
   <meta name="description" content="Saint Michael and Saint Yared Tigray Orthodox Tewahedo Church Baltimore – community, worship, and fellowship.">
 
   <style>
@@ -55,7 +58,6 @@
     h2 {
       color: #005f73;
     }
-    /* Make sure iframes show up properly */
     iframe {
       width: 100%;
       height: 450px;
@@ -142,21 +144,21 @@
     </ul>
   </div>
 
-  <!-- EVENTS SECTION -->
+  <!-- EVENTS SECTION (LIVE DRIVE EMBED) -->
   <div class="section" id="events">
     <h2>Feast Day Celebrations</h2>
     <iframe src="https://drive.google.com/embeddedfolderview?id=1L0oQaIDHMU4MImdsMwnbVCtKDnN89oQm#list"></iframe>
     <div class="placeholder">If no events appear, please check back soon.</div>
   </div>
 
-  <!-- GALLERY SECTION -->
+  <!-- GALLERY SECTION (LIVE DRIVE EMBED) -->
   <div class="section" id="gallery">
     <h2>Photo Gallery</h2>
     <iframe src="https://drive.google.com/embeddedfolderview?id=1L26YiiSXDKBSSGMGenNya0LbLG_3z_yj#grid"></iframe>
     <div class="placeholder">Photos from celebrations and community events will appear here.</div>
   </div>
 
-  <!-- MEDIA SECTION -->
+  <!-- MEDIA SECTION (LIVE DRIVE EMBED) -->
   <div class="section" id="media">
     <h2>Media – Sermons &amp; Choir</h2>
     <iframe src="https://drive.google.com/embeddedfolderview?id=1L2D9s31FnflGP0G_R1uqqMBFzmc8CvZM#list"></iframe>
